tests/errors/division_by_zero.bas
10 LET A = 10
20 LET B = 0
30 PRINT A / B